# hlte-old

./: CMakeLists.txt  README.md
src/: globals.h  main.c
src/data_structures/: list.c  string.c  string.h
src/display/: display_buffer.c  display_buffer.h  display_cell.h
src/editor/: cursor.h  editor.c  editor.h
src/file/: file_context.c  file_context.h  file_line.c  file_line.h
src/terminal/: input.h  terminal.c  terminal.h  terminal_formatting.h
